Fix line spacing

--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,7 @@ position: relative;
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
+  line-height: 1.5;
 }
 
 h1 {
